--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Milkman';
-    src: url('fonts/milkman.ttf') format('truetype');
+    src: url('fonts/Milkman.ttf') format('truetype');
     font-weight: normal;
     font-style: normal;
 }
