--- a/styles.css
+++ b/styles.css
@@ -589,6 +589,9 @@ h2 {
         height: auto; /* Adjust height dynamically */
         padding: 20px;
     }
+    #about{
+        display: none;
+    }
 
     /* Hide extra text */
     .row1, .row3 {
